# tfht_enforce_idx

./: .agent-plan.md  .aiignore  .claudeignore  .codecov.yml  .env.example  .gitignore  .gitleaks.toml  .pre-commit-ci.yaml  .pre-commit-config.yaml  AGENTS.md  LOCAL_AGENTS.example.md  PLAN.md  README.md  llms.txt  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci-test.yml  codecov-yaml-validate.yml  codecoverage.yml  daily-state-run.yml  integration-tests.yml  lint.yml  news-items-backfill-discover.yml  news-items-backfill-scrape.yml  news-items-backup.yml  news-items-daily-review.yml  news-items-discover.yml  news-items-monthly-report.yml  news-items-release.yml  pr-agent-context-refresh.yml  pre-commit-ci.yml  pyproject-validate.yml  smoke-tests.yml  state-repo-squash.yml  unit-tests.yml  weekly-state-run.yml
agents/: news-github.yaml  news.yaml
agents/backup/: news_items.yaml
agents/live_checks/: classifier_issue_48.yaml
agents/news/: ci.overlay.yaml  (+4 more)
docs/: 2026_04_04_tfht_state_of_project_report.md  2026_backfill_release_daily_online_plan.md  2026_backfill_release_daily_online_report_2026_05_15.md  CHATGPT_26_04_PLAN.md  IMPLEMENTATION_PLAN.md  LEGAL_CONV_EN.md  LEGAL_CONV_HE.md  MILESTONE_3_VALIDATION_PR_BREAKDOWN.md  MVP_SPEC.md  PHASE_C_PLAN.md  TFHT Enforcement Index - Manual Tracking.xlsx  TFHT Enforcement Index - Monthly Report Template.docx  TFHT Enforcement Index - Typology.xlsx  articles_examples.md  batch_scraping_protocol.md  discovery_operations.md  january_2026_backfill_wet_test_evidence_2026_05_13.md  january_2026_backfill_wet_test_plan.md  local_prefilter_cascade_design.md  local_prefilter_cascade_implementation_plan.md  may_26_experiment_plan.md  operational_reference.md  phase_c_source_health_triage_2026_05_03.md  product_def.md  tfht_discovery_layer_design_amended.md  tfht_discovery_layer_implementation_plan.md
review_app/: README.md  wrangler.toml
scripts/: run_2026_backfill_release_daily.py  run_python_with_src.sh  state-repo-common.sh  state-run.sh  state-squash.sh  validate_agent_plan.py
tests/: __init__.py
triage_app/: serve.py  sync.py
(+254 files in other folders)
