[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "denbust"
version = "0.1.0"
description = "Monitor enforcement of anti-brothel laws in Israel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "denbust contributors" }]
keywords = ["monitoring", "news", "israel", "enforcement"]

dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
denbust = "denbust.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/denbust"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.isort]
known-first-party = ["denbust"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["feedparser.*", "bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
